@@ -16,6 +16,10 @@
   * Routines taking objects as arguments can parse them better, as
     suggested by Neal Norwitz when reviewing commit 63207 in Python SVN.
     The resulting code is (marginally) faster, smaller and clearer.
+  * Improve testsuite behaviour under MS Windows.
+  * Use ABC (Abstract Base Classes) under Python 2.6 and 3.0.
+  * Support for "relative imports".
+  * Replication testcode behaves better in heavily loaded machines.
 
 4.7.1:
   * Workaround a problem with un-initialized threads with the
